--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ django-timezone-field==6.1.0
 djangorestframework==3.15.1
 execnet==2.1.1
 executing==2.0.1
+fake-useragent==1.5.1
 flake8==7.0.0
 Flake8-pyproject==1.2.3
 h11==0.14.0
